2000-10-16  Ramiro Estrugo  <ramiro@eazel.com>

	* modules/file-method.c:
	Include <stdio.h> to get the prototype for rename().
	
2000-10-14  Ian McKellar  <yakk@yakk.net.au>

	* modules/ftp-method.c: (dircache_setup), (dircache_expire):
	Initial caching support. Currently disabled.

	(do_path_transfer_command):
	Fix for empty paths.

	(ftp_connection_create), (ftp_connection_destroy), 
	(ftp_connection_aquire), (ftp_connection_release):
	Count connections for debugging purposes.

	(ls_to_file_info), (do_get_file_info),
	(do_open_directory), (do_read_directory):
	* modules/ftp-method.h:
	Initial symlink expansion support

	* test/test-directory.c: (print_list):
	Better symlink debugging output.

2000-10-12  Mike Fleming  <mfleming@eazel.com>

	* modules/http-method.c:
	Added define from GMan to make it compile under Solaris (hopefully)

2000-10-12  Martin Baulig  <baulig@suse.de>

	* libgnomevfs-corba/gnome-vfs-slave.c (impl_Request_get_file_info): 
	Call CORBA_string_dup() on p->name, p->symlink_name and p->mime_type.

2000-10-12  Grahame Bowland <gbowland@tartarus.uwa.edu.au>

	* libgnomevfs/gnome-vfs-result.c:
	(gnome_vfs_result_from_errno_code), (gnome_vfs_result_from_errno):
	* libgnomevfs/gnome-vfs-result.h:
	Added a gnome_vfs_result_from_errno_code convenience call.
	
2000-10-11  Mike Fleming  <mfleming@eazel.com>

	* modules/http-method.c:
	Oops. I left the debug messages on

2000-10-11  Mike Fleming  <mfleming@eazel.com>

	* modules/http-method.c: (propfind_href_to_vfs_uri):
	Forgoet a NULL on g_strconcat, as I'm prone to.

2000-10-11  Darin Adler  <darin@eazel.com>

	Fixed broken remnants of support for building without GConf.
	
	* libgnomevfs/gnome-vfs-mime-handlers.c: (unref_gconf_engine),
	(get_user_level): Fixed code to work with new GConf. It was still
	using the pre-0.9 GConf API, but it was inside HAVE_GCONF
	conditionals which were always false.
	* Makefile.am: Removed HAVE_GCONF conditionals..